webinars/advanced-rate-limit/3-per-http-method/vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: spelunker
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: spelunker-spelunker-80
              namespace: gloo-system
        options:
          ratelimit:
            rateLimits:
              - actions:
                  - remoteAddress: {}
              - actions:
                  - requestHeaders:
                      descriptorKey: method
                      headerName: :method
                  - remoteAddress: {}
